# llm-snipets

./: .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml
langchain/: LCEL.ipynb  agents.ipynb  llama-index.ipynb  memory_in_agent.ipynb  runnable.ipynb
langchain-ai-handbook/: 6_ai_agents.ipynb  agents.ipynb  sample_db.json
langchain/langchain-ai-handbook/: 7_custom_tools.ipynb
langchain/neo4j/: docker-compose.yml  neo4j.ipynb
langsmith/: docker-compose.yml  tutorial.ipynb
llama-index/: chatbot.ipynb
llm-ops/langfuse/: main.py
llm-ops/langsmith/: main.py
llm-ops/mlflow/: main.ipynb
llm-ops/weave/wandb/: latest-run
llm-ops/weave/wandb/run-20241008_230940-sppvbqyp/: run-sppvbqyp.wandb
llm-ops/weave/wandb/run-20241008_230940-sppvbqyp/files/: config.yaml
local-llm/: agents.ipynb  gemma-2-2b-it.ipynb  llama-3_1-8b.ipynb  ollama.ipynb
mcp/tutorial/: agent.py  client.py  pyproject.toml  weather.py
mem0/: docker-compose.yml  oss.ipynb  sandbox.ipynb
openai/: agents.ipynb  function_calling.ipynb  streaming.ipynb  streamint.py
route-suggestion/: .env.example  logic.ipynb  sandbox.ipynb
streaming/: main.ipynb  main.py
