[tool.poetry]
name = "llm-snipets"
version = "0.1.0"
description = "LLM sandbox"
authors = ["Takuro Takezawa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.0"
llama-index = "^0.9.15.post2"
python-dotenv = "^1.0.0"
numexpr = "^2.8.8"
transformers = "^4.36.1"
pydantic = "^2.5.2"
chromadb = "^0.4.21"
torch = "^2.1.2"
pypdf = "^3.17.4"
neo4j = "^5.20.0"
langchain-community = "^0.2.7"
langchain-ollama = "^0.1.0"
pyautogen = "^0.2.32"
pandas = "^2.2.2"
langchain-openai = "^0.1.19"
accelerate = "^0.33.0"
langfuse = "^2.51.3"
mlflow = "^2.16.2"
langsmith = "^0.1.132"
openai-agents = "^0.0.4"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.5.7"
huggingface-hub = {extras = ["cli"], version = "^0.24.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
