[project]
name = "llm-snipets"
version = "0.1.0"
description = "LLM sandbox"
authors = [{ name = "Takuro Takezawa" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "langchain>=0.2.0,<0.3",
    "llama-index>=0.9.15.post2,<0.10",
    "python-dotenv>=1.0.0,<2",
    "numexpr>=2.8.8,<3",
    "transformers>=4.36.1,<5",
    "pydantic>=2.5.2,<3",
    "chromadb>=0.4.21,<0.5",
    "torch>=2.1.2,<3",
    "pypdf>=3.17.4,<4",
    "neo4j>=5.20.0,<6",
    "langchain-community>=0.2.7,<0.3",
    "langchain-ollama>=0.1.0,<0.2",
    "pyautogen>=0.2.32,<0.3",
    "pandas>=2.2.2,<3",
    "langchain-openai>=0.1.19,<0.2",
    "accelerate>=0.33.0,<0.34",
    "langfuse>=2.51.3,<3",
    "mlflow>=2.16.2,<3",
    "langsmith>=0.1.132,<0.2",
    "openai-agents>=0.0.4,<0.0.5",
    "fastapi[standard]>=0.115.12,<0.116",
    "litellm>=1.65.1,<2",
    "mcp[cli]>=1.8.0,<2",
    "httpx>=0.28.1,<0.29",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "ruff>=0.5.7,<0.6",
    "huggingface-hub[cli]>=0.24.5,<0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
