[project]
name = "llm-snipets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-neo4j>=0.4.0",
    "langfuse>=2.60.5",
    "langsmith>=0.3.42",
    "litellm>=1.67.5",
    "llama-index>=0.12.37",
    "mcp[cli]>=1.9.0",
    "mem0ai>=0.1.102",
    "mlflow>=2.22.0",
    "neo4j>=5.28.1",
    "ollama>=0.4.8",
    "openai>=1.81.0",
    "pyautogen>=0.9",
    "pydantic>=2.11.4",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.31.4",
    "jupyter>=1.1.1",
    "ruff>=0.11.10",
]
